--- a/Client-app/src/index.html
+++ b/Client-app/src/index.html
@@ -54,6 +54,9 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/assets/icons/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
+    
+    <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5ffd61d36b01f7835fb30508" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://assets-global.website-files.com/5ffd61d36b01f7835fb30508/js/rezi-v3.5da25a471.js" type="text/javascript"></script>
 
     <!-- anti-flicker snippet (recommended)  -->
     <style>
