Add no archive for robots

--- a/Client-app/src/index.html
+++ b/Client-app/src/index.html
@@ -21,7 +21,7 @@
 
     <meta charset="utf-8">
     <base href="/">
-    <meta name=”robots” content=”Index,follow” />
+    <meta name=”robots” content=”Index,follow,noarchive” />
     <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=0"/>
     <meta name="copyright" content="Copyright 2020-2021 Workire.com, Inc."/>
     <link rel="apple-touch-icon" sizes="57x57" href="/assets/icons/apple-icon-57x57.png">
